# geoclue-postgresql

./: .env.template  .gitignore  CMakeLists.txt  README.markdown  geoclue-psql.c  geoclue-psql.desktop.template  schema.sql
