cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

project("geoclue-psql")

add_executable(geoclue-psql geoclue-psql.c)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(GEOCLUE REQUIRED libgeoclue-2.0)
PKG_SEARCH_MODULE(GLIB REQUIRED glib-2.0)
PKG_SEARCH_MODULE(PQ REQUIRED libpq)
INCLUDE_DIRECTORIES(
  ${GEOCLUE_INCLUDE_DIRS}
  ${GLIB_INCLUDE_DIRS}
  ${PQ_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(
  ${PROJECT_NAME}
  ${GEOCLUE_LIBRARIES}
  ${GLIB_LIBRARIES}
  ${PQ_LIBRARIES}
)
